--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.polemicover.net"
+baseURL = "https://polemic.pages.dev"
 author = "Matteo Castellani"
 copyright = "Matteo Castellani 2010-2023"
 languageCode = "it"
