--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ theme = 'beautifulhugo'
 selfHosted = true
 hometitle = "La Casa Di Polemica"
 subtitle = "Esclusivamente Over The Net"
-favicon = "img/funico.ico"
+favicon = "img/funico.jpg"
 logo = "img/LeVecchieECareAbitudini-150x150.jpg"
 rss = true
 socialShare = true
